share buttons formulated

--- a/app/emails/welcome.html
+++ b/app/emails/welcome.html
@@ -6,8 +6,8 @@
 
 <p> In the meantime you can help speed up the process by forwarding your friends, neighbors, and community this email.</p>
 
-<p> If you prefer Facebook <a href="#"><button>HERE</button></a><p>
+<p> If you prefer sharing on Facebook: <a href="http://www.facebook.com/sharer.php?u=https://afternoon-castle-45268.herokuapp.com/" target="_blank"><img class="" src="../img/facebook-btn.png" alt="Facebook" /></a><p>
 
 <p> Sincerely,</p>
 
-<p> Raylife </p>
+<p> Cooperative Wifi </p>
