--- a/app/emails/welcomeEmail.html
+++ b/app/emails/welcomeEmail.html
@@ -63,7 +63,7 @@
     <p>This email was sent to {{email}}.</p>
     <p>If you have any questions or issues, please visit the help center.<p>
     <p>If you did not intend to sign up for wifi in your area, please
-      <a href="https://www.cooperativewifi.com/customer/delete?email={{email}}">unsubscribe</a> to be removed from the list.
+      <a href="http://localhost:5447/api/customer/remove?email={{email}}">unsubscribe</a> to be removed from the list.
     </p>
     <p>&copy COOPERATIVE WIFI, inc.</p>
     <p><a href="">Privacy Policy</a> | <a href="">Security Policy</a> | <a href="">Terms of Service</a></p>
